--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <h1>Search Yahoo</h1>
         <input id="searchInput" placeholder="search">
         <input id="searchButton" type="submit" value="search!">
-        <p><a href='#'></p>
+        <p><a href='#'></a></p>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.js"></script>
         <script src="/main.js"></script>
     </body>
